# mcp-server

./: README.md
01-python-mcp-server/: .gitignore  README.md  auth.py  calendar_service.py  credentials.json  example_credentials.json  example_service_account.json  example_token.json  main.py  pyproject.toml  server.py  server_http.py  server_sse.py  server_stdio.py  test_calender.py
